Test generate navigation bar menu

--- a/generate/static/Getting_Started.html
+++ b/generate/static/Getting_Started.html
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item Nav__item--active"><a href="Getting_Started.html">Getting Started</a></li></ul>
+<ul class="Nav"><li class="Nav__item Nav__item--active"><a href="Getting_Started.html">Getting Started</a></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="Install_Instruction/Android.html">Android</a></li><li class="Nav__item "><a href="Install_Instruction/Web.html">Web</a></li></ul></li></ul>
 <div class="Links">
 <div class="CodeToggler">
 <hr/>
@@ -109,6 +109,10 @@
 </div>
 
 </div>
+<nav>
+<ul class="Pager">
+<li class="Pager--next"><a href="Install_Instruction/IOS.html">Next</a></li> </ul>
+</nav>
 </article>
 </div>
 </div>
