--- a/generate/static/Getting_Started.html
+++ b/generate/static/Getting_Started.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>          <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<title>Getting Started - MStage.io</title>
+<title>Getting Started - mStage.io</title>
 <meta content="Documentation for UserKit and LoginKit SDK" name="description"/>
 <meta content="I, Me &amp; Myself" name="author">
 <meta charset="utf-8">
@@ -23,7 +23,7 @@
 </link></link></meta></link></meta></meta></head>
 <body class="">
 <header class="Navbar hidden-print">
-<a class="Navbar__brand" href="http://mstage.io">MStage.io</a>
+<a class="Navbar__brand" href="http://mstage.io">mStage.io</a>
 <style>ul.tab{list-style-type:none;margin:0;padding:0;overflow:hidden;border:0 solid #ccc;background-color:#f1f1f1}ul.tab li{float:left}ul.tab li a{display:inline-block;color:#000;text-align:center;padding:14px 16px;text-decoration:none;transition:.3s;font-size:17px}.tabcontent{display:none;margin:0;padding:0;border:0 solid #ccc;border:none}ul.tab li a:hover{background-color:#ddd}ul.tab li a:focus,.active{background-color:#ccc}.tabcontent{-webkit-animation:fadeEffect 1s;animation:fadeEffect 1s}@-webkit-keyframes fadeEffect{from{opacity:0}to{opacity:1}}@keyframes fadeEffect{from{opacity:0}to{opacity:1}}.s-content pre{background:#fbfbfb;padding:20px;margin:0}</style></header>
 <div class="Columns content">
 <aside class="Columns__left Collapsible">
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item Nav__item--active"><a href="Getting_Started.html">Getting Started</a></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="Install_Instruction/Android.html">Android</a></li><li class="Nav__item "><a href="Install_Instruction/Web.html">Web</a></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item Nav__item--active"><a href="Getting_Started.html">Getting Started</a></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="Install_Instruction/Android.html">Android</a></li><li class="Nav__item "><a href="Install_Instruction/Web.html">Web</a></li></ul></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Integration</a><ul class="Nav"><li class="Nav__item "><a href="Integration/Event_tracking.html">Event tracking</a></li><li class="Nav__item "><a href="Integration/Stream_Analytics_Event.html">Stream Analytics Event</a></li></ul></li></ul>
 <div class="Links">
 </div>
 </div>
@@ -54,9 +54,9 @@
 <div class="s-content">
 <h2 id="page_Test_mark_down">Test mark down</h2>
 <ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl0" onclick="openTab(event, 'tc0', 'android0', 'tl0')">Android</a></li>
-<li><a href="javascript:void(0)" class="tablinks tl0" onclick="openTab(event, 'tc0', 'ios0', 'tl0')">IOS</a></li>
-<li><a href="javascript:void(0)" class="tablinks tl0" onclick="openTab(event, 'tc0', 'web0', 'tl0')">Web</a></li></ul>
+<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'android0', 'tl0')">Android</a></li>
+<li><a href="javascript:void(0)" class="tablinks tl0 " onclick="openTab(event, 'tc0', 'ios0', 'tl0')">IOS</a></li>
+<li><a href="javascript:void(0)" class="tablinks tl0 " onclick="openTab(event, 'tc0', 'web0', 'tl0')">Web</a></li></ul>
 <div id='android0' class='tabcontent tc0'>
 <pre><code class="language-java">void test() {
     doBla();
@@ -82,7 +82,7 @@
 
 <h2 id="page_Bla">Bla</h2>
 <ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl1" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li></ul>
+<li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li></ul>
 <div id='android1' class='tabcontent tc1'>
 <pre><code class="language-java">void test2() {
 
@@ -92,8 +92,8 @@
 
 <p>askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd askjd haskdn kasdjh asjd kjasdhkjashd asdasjdaklsdha sdasd alksdj lasjd</p>
 <ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl2" onclick="openTab(event, 'tc2', 'android2', 'tl2')">Android</a></li>
-<li><a href="javascript:void(0)" class="tablinks tl2" onclick="openTab(event, 'tc2', 'ios2', 'tl2')">IOS</a></li></ul>
+<li><a href="javascript:void(0)" class="tablinks tl2 default_open" onclick="openTab(event, 'tc2', 'android2', 'tl2')">Android</a></li>
+<li><a href="javascript:void(0)" class="tablinks tl2 " onclick="openTab(event, 'tc2', 'ios2', 'tl2')">IOS</a></li></ul>
 <div id='android2' class='tabcontent tc2'>
 <pre><code class="language-java">class test3() {
 
@@ -124,5 +124,5 @@
 <script>hljs.initHighlightingOnLoad();</script>
 <!-- JS -->
 <script src="themes/daux/js/daux.js"></script>
-<script>function openTab(evt,tab_content,active_id,tab_links){var i,tabcontent,tablinks;tabcontent=document.getElementsByClassName(tab_content);for(i=0;i<tabcontent.length;i++){tabcontent[i].style.display='none'}tablinks=document.getElementsByClassName(tab_links);for(i=0;i<tablinks.length;i++){tablinks[i].className=tablinks[i].className.replace(' active','')}document.getElementById(active_id).style.display='block';evt.currentTarget.className+=' active'}</script></body>
+<script>function openTab(evt,tab_content,active_id,tab_links){var i,tabcontent,tablinks;tabcontent=document.getElementsByClassName(tab_content);for(i=0;i<tabcontent.length;i++){tabcontent[i].style.display='none'}tablinks=document.getElementsByClassName(tab_links);for(i=0;i<tablinks.length;i++){tablinks[i].className=tablinks[i].className.replace(' active','')}document.getElementById(active_id).style.display='block';evt.currentTarget.className+=' active'};for(default_open_list=document.getElementsByClassName('default_open'),i=0;i<default_open_list.length;i++)default_open_list[i].click();</script></body>
 </html>
