--- a/generate/static/Integration/Event_tracking.html
+++ b/generate/static/Integration/Event_tracking.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>          <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<title>Web - mStage.io</title>
+<title>Event tracking - mStage.io</title>
 <meta content="Documentation for UserKit and LoginKit SDK" name="description"/>
 <meta content="I, Me &amp; Myself" name="author">
 <meta charset="utf-8">
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item "><a href="../Getting_Started.html">Getting Started</a></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="../Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="../Install_Instruction/Android.html">Android</a></li><li class="Nav__item Nav__item--active"><a href="../Install_Instruction/Web.html">Web</a></li></ul></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Integration</a><ul class="Nav"><li class="Nav__item "><a href="../Integration/Event_tracking.html">Event tracking</a></li><li class="Nav__item "><a href="../Integration/Stream_Analytics_Event.html">Stream Analytics Event</a></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item "><a href="../Getting_Started.html">Getting Started</a></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="../Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="../Install_Instruction/Android.html">Android</a></li><li class="Nav__item "><a href="../Install_Instruction/Web.html">Web</a></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Integration</a><ul class="Nav"><li class="Nav__item Nav__item--active"><a href="../Integration/Event_tracking.html">Event tracking</a></li><li class="Nav__item "><a href="../Integration/Stream_Analytics_Event.html">Stream Analytics Event</a></li></ul></li></ul>
 <div class="Links">
 </div>
 </div>
@@ -46,42 +46,65 @@
 <div class="doc_content">
 <article class="Page">
 <div class="Page__header">
-<h1><a href="../Install_Instruction/IOS.html">Install Instruction</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../Install_Instruction/Web.html">Web</a></h1>
+<h1><a href="../Integration/Event_tracking.html">Integration</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../Integration/Event_tracking.html">Event tracking</a></h1>
 <span style="float: right; font-size: 10px; color: gray;">
-<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_Install_Instruction/04_Web.md" target="_blank">Edit on GitHub</a>
+<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/02_Integration/01_Event_tracking.md" target="_blank">Edit on GitHub</a>
 </span>
 </div>
 <div class="s-content">
-<h2 id="page_Install_instruction_for_Web">Install instruction for Web</h2>
-<p>asd asd
-asd</p>
+<h1 id="page_Track_an_event">Track an event</h1>
 <ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'web0', 'tl0')">Web</a></li></ul>
-<div id='web0' class='tabcontent tc0'>
-<pre><code class="language-javascript">/**
- @constructor
- @abstract
- */
-var Animal = function() {
-    if (this.constructor === Animal) {
-      throw new Error("Can't instantiate abstract class!");
-    }
-    // Animal initialization...
-};
-
-/**
- @abstract
- */
-Animal.prototype.say = function() {
-    throw new Error("Abstract method!");
+<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'android0', 'tl0')">Android</a></li>
+<li><a href="javascript:void(0)" class="tablinks tl0 " onclick="openTab(event, 'tc0', 'ios0', 'tl0')">IOS</a></li></ul>
+<div id='android0' class='tabcontent tc0'>
+<pre><code class="language-java">void onPurchased() {
+    JSONObject eventProps = new JSONObject();
+    eventProps.put("item", 1234);
+    UserKit.getInstance().track("purchase", eventProps);
 }
+</code></pre>
+</div>
+
+
+<div id='ios0' class='tabcontent tc0'>
+<pre><code class="language-swift">func onPurchased() {
+   let eventProps = ["item": 1234];
+   UserKit.mainInstance().track("purchase", eventProps);
+}
+</code></pre>
+</div>
+
+<p>Event property types are those which json format allowed, they are <code>String</code>, <code>Boolean</code>, <code>Array</code>, and <code>null</code>. Property with multi type example:</p>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li>
+<li><a href="javascript:void(0)" class="tablinks tl1 " onclick="openTab(event, 'tc1', 'ios1', 'tl1')">IOS</a></li></ul>
+<div id='android1' class='tabcontent tc1'>
+<pre><code class="language-java">void doTrackEvent() {
+    // Map is also supported.
+    Map&lt;String, Object&gt; eventProps = new HashMap&lt;&gt;();
+    eventProps.put("String", "aString");
+    eventProps.put("Double", 123.456);
+    eventProps.put("Array", Arrays.asList("List of any object", 1, true));
+    UserKit.getInstance().track("test_event", eventProps);
+}
+</code></pre>
+</div>
+
+
+<div id='ios1' class='tabcontent tc1'>
+<pre><code class="language-swift">let eventProps = [
+    "String": "aString",
+    "Double": 123.456,
+    "Array": ["List of any object", 1, true]
+]
+UserKit.mainInstance().track("test_event", eventProps);
 </code></pre>
 </div>
 
 </div>
 <nav>
 <ul class="Pager">
-<li class="Pager--prev"><a href="../Install_Instruction/Android.html">Previous</a></li> <li class="Pager--next"><a href="../Integration/Event_tracking.html">Next</a></li> </ul>
+<li class="Pager--prev"><a href="../Install_Instruction/Web.html">Previous</a></li> <li class="Pager--next"><a href="../Integration/Stream_Analytics_Event.html">Next</a></li> </ul>
 </nav>
 </article>
 </div>
