--- a/generate/static/Integration/Stream_Analytics_Event.html
+++ b/generate/static/Integration/Stream_Analytics_Event.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]>          <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<title>Web - mStage.io</title>
+<title>Stream Analytics Event - mStage.io</title>
 <meta content="Documentation for UserKit and LoginKit SDK" name="description"/>
 <meta content="I, Me &amp; Myself" name="author">
 <meta charset="utf-8">
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item "><a href="../Getting_Started.html">Getting Started</a></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="../Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="../Install_Instruction/Android.html">Android</a></li><li class="Nav__item Nav__item--active"><a href="../Install_Instruction/Web.html">Web</a></li></ul></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Integration</a><ul class="Nav"><li class="Nav__item "><a href="../Integration/Event_tracking.html">Event tracking</a></li><li class="Nav__item "><a href="../Integration/Stream_Analytics_Event.html">Stream Analytics Event</a></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item "><a href="../Getting_Started.html">Getting Started</a></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Install Instruction</a><ul class="Nav"><li class="Nav__item "><a href="../Install_Instruction/IOS.html">IOS</a></li><li class="Nav__item "><a href="../Install_Instruction/Android.html">Android</a></li><li class="Nav__item "><a href="../Install_Instruction/Web.html">Web</a></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Integration</a><ul class="Nav"><li class="Nav__item "><a href="../Integration/Event_tracking.html">Event tracking</a></li><li class="Nav__item Nav__item--active"><a href="../Integration/Stream_Analytics_Event.html">Stream Analytics Event</a></li></ul></li></ul>
 <div class="Links">
 </div>
 </div>
@@ -46,42 +46,16 @@
 <div class="doc_content">
 <article class="Page">
 <div class="Page__header">
-<h1><a href="../Install_Instruction/IOS.html">Install Instruction</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../Install_Instruction/Web.html">Web</a></h1>
+<h1><a href="../Integration/Event_tracking.html">Integration</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../Integration/Stream_Analytics_Event.html">Stream Analytics Event</a></h1>
 <span style="float: right; font-size: 10px; color: gray;">
-<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_Install_Instruction/04_Web.md" target="_blank">Edit on GitHub</a>
+<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/02_Integration/02_Stream_Analytics_Event.md" target="_blank">Edit on GitHub</a>
 </span>
 </div>
 <div class="s-content">
-<h2 id="page_Install_instruction_for_Web">Install instruction for Web</h2>
-<p>asd asd
-asd</p>
-<ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'web0', 'tl0')">Web</a></li></ul>
-<div id='web0' class='tabcontent tc0'>
-<pre><code class="language-javascript">/**
- @constructor
- @abstract
- */
-var Animal = function() {
-    if (this.constructor === Animal) {
-      throw new Error("Can't instantiate abstract class!");
-    }
-    // Animal initialization...
-};
-
-/**
- @abstract
- */
-Animal.prototype.say = function() {
-    throw new Error("Abstract method!");
-}
-</code></pre>
-</div>
-
 </div>
 <nav>
 <ul class="Pager">
-<li class="Pager--prev"><a href="../Install_Instruction/Android.html">Previous</a></li> <li class="Pager--next"><a href="../Integration/Event_tracking.html">Next</a></li> </ul>
+<li class="Pager--prev"><a href="../Integration/Event_tracking.html">Previous</a></li> </ul>
 </nav>
 </article>
 </div>
