Add affiliate api doc

--- a/generate/static/UserKit/Getting_Started/IOS.html
+++ b/generate/static/UserKit/Getting_Started/IOS.html
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item Nav__item--active"><a href="../../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item Nav__item--active"><a href="../../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item "><a href="../../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
 <div class="Links">
 <div class="CodeToggler">
 <hr/>
@@ -84,7 +84,7 @@
 </div>
 <nav>
 <ul class="Pager">
-<li class="Pager--prev"><a href="../../UserKit/Getting_Started/Android.html">Previous</a></li> </ul>
+<li class="Pager--prev"><a href="../../UserKit/Getting_Started/Android.html">Previous</a></li> <li class="Pager--next"><a href="../../LoginKit/Affilate_Partner.html">Next</a></li> </ul>
 </nav>
 </article>
 </div>
