Update config: enable show date modified, add android api reference link

--- a/generate/static/UserKit/Getting_Started/IOS.html
+++ b/generate/static/UserKit/Getting_Started/IOS.html
@@ -38,6 +38,9 @@
 <!-- Navigation -->
 <ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item Nav__item--active"><a href="../../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item "><a href="../../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
 <div class="Links">
+<hr/>
+<a href="/sdk-doc/generate/android-source" target="_blank">Android API Reference</a>
+<br/>
 <div class="CodeToggler">
 <hr/>
 <a class="CodeToggler__button CodeToggler__button--main" href="#">Show Code Blocks Inline</a><br>
@@ -51,6 +54,8 @@
 <article class="Page">
 <div class="Page__header">
 <h1><a href="../../UserKit/Getting_Started/Android.html">UserKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../UserKit/Getting_Started/Android.html">Getting Started</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../UserKit/Getting_Started/IOS.html">IOS</a></h1>
+<span style="float: left; font-size: 10px; color: gray;">
+            Monday, December 26, 2016 6:22 PM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
 <a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/00_UserKit/00_Getting_Started/01_IOS.md" target="_blank">Edit on GitHub</a>
 </span>
