--- a/generate/static/LoginKit/Affilate_Partner.html
+++ b/generate/static/LoginKit/Affilate_Partner.html
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item "><a href="../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item Nav__item--active"><a href="../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item "><a href="../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../LoginKit/Getting_Started/Android.html">Android</a></li></ul></li><li class="Nav__item Nav__item--active"><a href="../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
 <div class="Links">
 <hr/>
 <a href="/sdk-doc/generate/android-source" target="_blank">Android API Reference</a>
@@ -57,7 +57,7 @@
 <span style="float: left; font-size: 10px; color: gray;">
             Monday, December 26, 2016 6:58 PM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
-<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/00_Affilate_Partner.md" target="_blank">Edit on GitHub</a>
+<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/09_Affilate_Partner.md" target="_blank">Edit on GitHub</a>
 </span>
 </div>
 <div class="s-content">
@@ -137,7 +137,7 @@ view.addSubview(oAuthWebView)
 </div>
 <nav>
 <ul class="Pager">
-<li class="Pager--prev"><a href="../UserKit/Getting_Started/IOS.html">Previous</a></li> </ul>
+<li class="Pager--prev"><a href="../LoginKit/Getting_Started/Android.html">Previous</a></li> </ul>
 </nav>
 </article>
 </div>
