--- a/generate/static/UserKit/Getting_Started/IOS.html
+++ b/generate/static/UserKit/Getting_Started/IOS.html
@@ -41,6 +41,8 @@
 <hr/>
 <a href="/sdk-doc/generate/android-source" target="_blank">Android API Reference</a>
 <br/>
+<a href="/sdk-doc/generate/ios-source" target="_blank">IOS API Reference</a>
+<br/>
 <div class="CodeToggler">
 <hr/>
 <a class="CodeToggler__button CodeToggler__button--main" href="#">Show Code Blocks Inline</a><br>
