--- a/generate/static/LoginKit/Authenticate.html
+++ b/generate/static/LoginKit/Authenticate.html
@@ -57,15 +57,47 @@
 <div class="Page__header">
 <h1><a href="../LoginKit/Authenticate.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../LoginKit/Authenticate.html">Authenticate</a></h1>
 <span style="float: left; font-size: 10px; color: gray;">
-            Wednesday, December 28, 2016 2:45 AM        </span>
+            Wednesday, December 28, 2016 6:37 AM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
 <a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/01_Authenticate.md" target="_blank">Edit on GitHub</a>
 </span>
 </div>
 <div class="s-content">
-<h2 id="page_Sign_up_new_account">Sign up new account</h2>
-<pre><code>
+<p>[TOS]</p>
+<h1 id="page_Sign_up_new_account">Sign up new account</h1>
+<hr/>
+<p>You can create new account with <code>email</code>, <code>password</code> and store a specific profile for this account.
+Try it:</p>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'android0', 'tl0')">Android</a></li>
+<li><a href="javascript:void(0)" class="tablinks tl0 " onclick="openTab(event, 'tc0', 'ios0', 'tl0')">IOS</a></li></ul>
+<div id='android0' class='tabcontent tc0'>
+<pre><code class="language-java">ProfileProperties profileProps = ImmutableProfileProperties.builder()
+        .name("John")  
+        .avatar(avatarFile)
+        .putProperties("account_type", "free")
+        .putProperties("is_male", true)
+        .putProperties("age", 21)
+        .build();
+LoginKit.getInstance()
+        .signUpNewProfile("hello@world.com", "123abc", false, profileProps)
+        .subscribeOn(Schedulers.io())
+        .observeOn(AndroidSchedulers.mainThread())
+        .subscribe(accountInfo -&gt; {
+            Log.d(TAG, "Register account success: " + accountInfo);
+        }, Throwable::printStackTrace)
 </code></pre>
+</div>
+
+
+<div id='ios0' class='tabcontent tc0'>
+<pre><code class="language-swift">
+</code></pre>
+</div>
+
+<p>After User created an account, now they can use it to login, let move to next section.</p>
+<h1 id="page_Sign_in_using_and">Sign in using <code>email</code> and <code>password</code></h1>
+<hr/>
 </div>
 <nav>
 <ul class="Pager">
