--- a/generate/static/LoginKit/Getting_Started/Android.html
+++ b/generate/static/LoginKit/Getting_Started/Android.html
@@ -57,7 +57,7 @@
 <div class="Page__header">
 <h1><a href="../../LoginKit/Authenticate.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../LoginKit/Getting_Started/Android.html">Getting Started</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../LoginKit/Getting_Started/Android.html">Android</a></h1>
 <span style="float: left; font-size: 10px; color: gray;">
-            Wednesday, December 28, 2016 2:51 AM        </span>
+            Wednesday, December 28, 2016 7:27 AM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
 <a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/00_Getting_Started/Android.md" target="_blank">Edit on GitHub</a>
 </span>
@@ -117,10 +117,10 @@ dependencies {
 <div id='android1' class='tabcontent tc1'>
 <pre><code class="language-java">void doResetPassword(String email) {
     LoginKit.getInstance().resetPassword(email)
-        .subscribeOn(Schedulers.io())
-        .observeOn(AndroidSchedulers.mainThread())
-        .subscribe(() -&gt; Toast.makeText(this, "Reset password success", Toast.LENGTH_SHORT).show(),
-            Throwable::printStackTrace);
+            .subscribeOn(Schedulers.io())
+            .observeOn(AndroidSchedulers.mainThread())
+            .subscribe(() -&gt; Toast.makeText(this, "Reset password success", Toast.LENGTH_SHORT).show(),
+                Throwable::printStackTrace);
 }
 </code></pre>
 </div>
@@ -144,6 +144,58 @@ which was designed to friendly with Java 8 Lambda expression:</p>
 <p>This job will be scheduled to run in IO thread pool (<code>Schedulers.io()</code>), and will try to call back the consumer - <code>onSuccess</code> in the current thread (the thread call <code>resetPassword</code>), if can't, <code>onSuccess</code> will call back on <strong>main thread</strong>.</p>
 </blockquote>
 <p>And the same thing with all API has callback function.</p>
+<h2 id="page_Handling_errors">Handling errors</h2>
+<p>React with specific <code>Exception</code> case is one of the most important parts in programming.
+<code>LoginKit</code> make it simply to handle, if the error encountered is:</p>
+<ul>
+<li>
+<code>IdentityException</code>: you made a bad request.
+You can print it into <code>Logcat</code> to get more detail. A convenient that you can know exactly
+what sort of error occurred, using <code>IdentityException.getIdentityError</code>.</li>
+<li>
+<code>IOException</code>: maybe due to networking, the connection to server is broken during the request.</li>
+<li>All other exceptions are of kind UNKNOWN, read the stack trace carefully.</li>
+</ul>
+<p>Assume that we are going to create new account with email and password,
+there are some exceptions that we must handle, such as:</p>
+<ul>
+<li>Email is invalid or already exists.</li>
+<li>Upload avatar failed due to networking.
+Now let see how we can handle it:</li>
+</ul>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl3 default_open" onclick="openTab(event, 'tc3', 'android3', 'tl3')">Android</a></li></ul>
+<div id='android3' class='tabcontent tc3'>
+<pre><code class="language-java">ProfileProperties profileProps = ImmutableProfileProperties.builder()
+        .name("John")  
+        .avatar(avatarFile)
+        .build();
+LoginKit.getInstance()
+        .signUpNewProfile("hello@world.com", "123abc", false, profileProps)
+        .subscribeOn(Schedulers.io())
+        .observeOn(AndroidSchedulers.mainThread())
+        .subscribe(accountInfo -&gt; {
+            Log.d(TAG, "Register account success: " + accountInfo);
+        }, error -&gt; {
+            error.printStackTrace();
+            if (error instanceOf IdentityException) {
+                switch(((IdentityException) error).getIdentityError()) {
+                    case EMAIL_EXIST:
+                        Toast.makeText(this, "Email exist", Toast.LENGTH_SHORT).show();
+                        break;
+                    case INVALID_EMAIL_OR_PASSWORD:
+                        Toast.makeText(this, "Invalid Email or Password", Toast.LENGTH_SHORT).show();
+                        break;
+                }
+            } else if (error instanceOf IOException) {
+                // A network error happened
+            } else {
+                throw Exceptions.propagate(error);
+            }
+        })
+</code></pre>
+</div>
+
 </div>
 <nav>
 <ul class="Pager">
