--- a/generate/static/LoginKit/Authenticate.html
+++ b/generate/static/LoginKit/Authenticate.html
@@ -57,7 +57,7 @@
 <div class="Page__header">
 <h1><a href="../LoginKit/Authenticate.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../LoginKit/Authenticate.html">Authenticate</a></h1>
 <span style="float: left; font-size: 10px; color: gray;">
-            Wednesday, December 28, 2016 8:34 AM        </span>
+            Thursday, December 29, 2016 10:54 PM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
 <a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/01_Authenticate.md" target="_blank">Edit on GitHub</a>
 </span>
@@ -80,7 +80,7 @@
 <p><a href="#page_Reset_password_of_account_created_by_email">Reset password of account created by email</a></p>
 </li>
 </ul>
-<h1 id="page_Sign_up_new_account">Sign up new account</h1>
+<h2 id="page_Sign_up_new_account">Sign up new account</h2>
 <hr/>
 <p>User can create new account with <code>email</code>, <code>password</code> and store a specific profile for this account.
 Try it:</p>
@@ -112,7 +112,7 @@ LoginKit.getInstance()
 </div>
 
 <p>After User created an account, now they can use it to login, let move to next section.</p>
-<h1 id="page_Sign_in_using_email_and_password">Sign in using <em>email</em> and <em>password</em></h1>
+<h2 id="page_Sign_in_using_email_and_password">Sign in using <em>email</em> and <em>password</em></h2>
 <hr/>
 <ul class='tab'>
 <li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li>
@@ -133,13 +133,13 @@ LoginKit.getInstance()
 
 <p>After that you can manage user's profiles using <a href="Account_Manager.html">AccountManager</a>. <br>
 Beside login using email and password, <code>LoginKit</code> also supports authenticate with social account from <code>Facebook</code> and <code>Google</code>.</br></p>
-<h1 id="page_Sign_in_using_Facebook_token">Sign in using <em>Facebook</em> token</h1>
+<h2 id="page_Sign_in_using_Facebook_token">Sign in using <em>Facebook</em> token</h2>
 <hr/>
 <ul class='tab'>
 <li><a href="javascript:void(0)" class="tablinks tl2 default_open" onclick="openTab(event, 'tc2', 'android2', 'tl2')">Android</a></li>
 <li><a href="javascript:void(0)" class="tablinks tl2 " onclick="openTab(event, 'tc2', 'ios2', 'tl2')">IOS</a></li></ul>
 <div id='android2' class='tabcontent tc2'>
-<pre><code class="language-java">LoginKit.getInstance().loginFacebookAccount("place Facebook auth token here",
+<pre><code class="language-java">LoginKit.getInstance().loginFacebookAccount("place Facebook access token here",
         accountInfo -&gt; {
             Log.d(TAG, "Login using Facebook auth token success: " + accountInfo);
         }, Throwable::printStackTrace);
@@ -152,7 +152,7 @@ Beside login using email and password, <code>LoginKit</code> also supports authe
 </code></pre>
 </div>
 
-<h1 id="page_Sign_in_using_Google_plus_token">Sign in using <em>Google plus</em> token</h1>
+<h2 id="page_Sign_in_using_Google_plus_token">Sign in using <em>Google plus</em> token</h2>
 <hr/>
 <ul class='tab'>
 <li><a href="javascript:void(0)" class="tablinks tl3 default_open" onclick="openTab(event, 'tc3', 'android3', 'tl3')">Android</a></li>
@@ -171,7 +171,7 @@ Beside login using email and password, <code>LoginKit</code> also supports authe
 </code></pre>
 </div>
 
-<h1 id="page_Reset_password_of_account_created_by_email">Reset password of account created by email</h1>
+<h2 id="page_Reset_password_of_account_created_by_email">Reset password of account created by email</h2>
 <hr/>
 <p>Add feature <em>"Reset password"</em> into your app, using <code>LoginKit.resetPassword</code> api:</p>
 <ul class='tab'>
