--- a/generate/static/LoginKit/Account_Manager.html
+++ b/generate/static/LoginKit/Account_Manager.html
@@ -57,12 +57,76 @@
 <div class="Page__header">
 <h1><a href="../LoginKit/Authenticate.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../LoginKit/Account_Manager.html">Account Manager</a></h1>
 <span style="float: left; font-size: 10px; color: gray;">
-            Wednesday, December 28, 2016 7:39 AM        </span>
+            Thursday, December 29, 2016 11:52 PM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
 <a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/02_Account_Manager.md" target="_blank">Edit on GitHub</a>
 </span>
 </div>
 <div class="s-content">
+<ul class="TableOfContents">
+<li>
+<p><a href="#page_Overview">Overview</a></p>
+</li>
+<li>
+<p><a href="#page_Account_profiles">Account profiles</a></p>
+<ul class="TableOfContents">
+<li>
+<p><a href="#page_Get_all_profiles">Get all profiles</a></p>
+</li>
+<li>
+<p><a href="#page_Create_new_one">Create new one</a></p>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="page_Overview">Overview</h2>
+<p>Access <code>AccountManager</code> instance:</p>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'android0', 'tl0')">Android</a></li></ul>
+<div id='android0' class='tabcontent tc0'>
+<pre><code class="language-java">AccountManager accountManager = LoginKit.getAccountManager();
+</code></pre>
+</div>
+
+<blockquote>
+<p><strong>Notice that</strong> to use apis under account manager, you must ensure that
+user already logged in, to check if user logged in or not, use <code>AccountManager.isLoggedIn()</code>
+method.</p>
+</blockquote>
+<h2 id="page_Account_profiles">Account profiles</h2>
+<p>With <code>LoginKit</code>, every account can has multiple profiles. After <code>user</code> already logged in,
+you can access all profile of their account.</p>
+<h3 id="page_Get_all_profiles">Get all profiles</h3>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li></ul>
+<div id='android1' class='tabcontent tc1'>
+<pre><code class="language-java">LoginKit.getAccountManager().getAccountProfiles()
+    .flatMap(listProfile -&gt; Observable.from(listProfile))
+    .subscribeOn(Schedulers.io())
+    .subscribe(profile -&gt; {
+        // do on each profile
+        Log.d("AccountProfile", profile.toString());
+    }, Throwable::printStackTrace);
+</code></pre>
+</div>
+
+<h3 id="page_Create_new_one">Create new one</h3>
+<p>To create new profile for current account, use <code>AccountManager.createNewProfile()</code>.
+After profile is created, <code>LoginKit</code> uses it as activating profile by default.</p>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl2 default_open" onclick="openTab(event, 'tc2', 'android2', 'tl2')">Android</a></li></ul>
+<div id='android2' class='tabcontent tc2'>
+<pre><code class="language-java">// create vip profile for current account.
+ProfileProperties profileProps = ImmutableProfileProperties.builder()
+        .name("John")  
+        .avatar(avatarFile)
+        .putProperties("account_type", "vip_account")
+        .build();
+LoginKit.getAccountManager().createNewProfile(profileProps,
+        newProfile -&gt; Log.d("CreateProfile", "Success: " + newProfile));
+</code></pre>
+</div>
+
 </div>
 <nav>
 <ul class="Pager">
